packages/viewer/src/styles/menus/menu-preview.module.scss
// stylelint-disable max-nesting-depth
// stylelint-disable no-descending-specificity

@import '~@micromag/core/scss/variables';
@import '~@micromag/core/scss/placeholders';

.container {
    display: flex;
    position: relative;
    flex-direction: column;
    height: 100%;
    padding: 10px;

    background-color: #000;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    color: #fff;

    .screenButton {
        @extend %reset-button;
        @extend %fullscreen;
        display: block;
    }

    &.disabled {
        .screenButton {
            pointer-events: none;
        }
    }

    .header {
        display: flex;
        align-items: center;
        margin-bottom: 20px;

        .button,
        .shareButton {
            display: inline-block;
            border: 0;
            background-color: transparent;
            color: inherit;
            font-size: 0.9rem;
            font-weight: 600;
            line-height: 1.4;
            text-align: center;
            vertical-align: middle;
            cursor: pointer;
            user-select: none;
        }

        .button {
            width: 20px;
            margin-left: 10px;
            padding: 0;

            &:first-child {
                margin-left: 0;
            }
        }

        .shareButton {
            z-index: 1;
        }

        .icon {
            display: block;
            width: 100%;
            height: 100%;
        }
    }

    .buttons {
        display: inline-flex;
        align-items: center;
    }

    .organisation {
        width: 30px;
        height: 30px;
        margin-right: 10px;
        border-radius: 50%;
        background-color: #fff;
        background-repeat: no-repeat;
        background-position: center;
        background-size: contain;
    }

    .title {
        margin-right: auto;
        color: #fff;
        font-family: Helvetica, Arial, sans-serif;
    }

    .content {
        position: relative;
        flex-grow: 1;
    }

    .scroll {
        @extend %fullscreen;
    }

    .nav {
        position: relative;
        flex-grow: 1;
        overflow: hidden;
    }

    .items,
    .item {
        margin: 0;
        padding: 0;
        list-style: none;
    }

    .items {
        display: flex;
        position: relative;
        flex-wrap: wrap;
        margin: -2px;
    }

    .item {
        position: relative;
        height: 0;

        &.active {
            .screenButton {
                pointer-events: none;
            }
        }
    }

    .itemContent {
        @extend %fullscreen;
        padding: 2px;
    }

    .screenContainer {
        position: relative;
        height: 100%;
    }

    .activeScreenBorder {
        @extend %fullscreen;
        border: 2px solid #fff;
    }

    .screenContent {
        transform-origin: left top;
        background-color: $gray-900;
    }
}

